--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
+        "maatwebsite/excel": "^3.1",
         "nwidart/laravel-modules": "^8.2",
         "predis/predis": "^1.1",
         "tymon/jwt-auth": "^1.0",
